--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -16,6 +16,7 @@
     backface-visibility: hidden;
     border-radius: 5px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+    overflow: hidden;
 
     &--front {
       background-color: $color-white;
